<resources>
    <string name="app_name">WanAndroid</string>

    <string name="loading">正在加载中&#8230;</string>
    <string name="home_page">首页</string>
    <string name="home_system">体系</string>
    <string name="official_account">博客</string>
    <string name="home_plaza">广场</string>
    <string name="home_mine">我的</string>
    <string name="home_project">项目</string>
    <string name="newest_project">最新项目</string>
    <string name="stick">置顶</string>
    <string name="theme_user">使用</string>
    <string name="theme_user_ing">使用中</string>
    <string name="press_again_to_exit">再按一次退出</string>
    <string name="login_immediately">登录/注册</string>
    <string name="browsing_history">浏览历史</string>
    <string name="my_integral">我的积分</string>
    <string name="integral_ranking">积分排行</string>
    <string name="my_share">我的分享</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_ku_tu">我的酷图</string>
    <string name="my_tool">我的工具</string>
    <string name="theme">主题风格</string>
    <string name="nigh_mode">夜间模式</string>
    <string name="light_mode">日间模式</string>
    <string name="open_source_licenses">开源协议</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="go_to_register">去注册</string>
    <string name="register">注册</string>
    <string name="againPassword">确认密码</string>

    <string name="login_loading">正在登录中&#8230;</string>
    <string name="login_success">登录成功&#8230;</string>

    <string name="anonymous">匿名</string>

    <string name="theme_white">白色</string>
    <string name="theme_red">红色</string>
    <string name="theme_pink">粉色</string>
    <string name="theme_orange">橙色</string>
    <string name="theme_blue">蓝色</string>
    <string name="theme_green">绿色</string>
    <string name="theme_cyan">青色</string>
    <string name="theme_purple">紫色</string>
    <string name="theme_brown">棕色</string>
</resources>