<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.zjrdev.wanandroid.view.CustomNavigationBarView
        android:id="@+id/loginNv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:isShow_left_img="true"
        app:left_textId="@string/login"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameLayout"
        app:layout_constraintTop_toBottomOf="@id/loginNv"
        style="@style/TextInputLayout"
        android:hint="@string/username"
        android:layout_marginTop="80dp"
        tools:ignore="MissingConstraints">
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@id/userNameLayout"
        style="@style/TextInputLayout"
        android:hint="@string/password"
        tools:ignore="MissingConstraints">
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/goRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:text="@string/go_to_register"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="?attr/colorAccent"
        android:text="@string/login"
        android:textColor="@color/color_theme_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goRegister"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>